Fix T43976: Edit-mode crash /w (scene/screen.scene) mismatch